--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "vanilla-app-template",
+  "name": "goit-js-hw-12",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/goit-js-hw-12/",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "glob": "^8.1.0",
-    "vite": "^4.5.2"
+    "vite": "^5.1.0"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
-    "vite-plugin-full-reload": "^1.0.5",
-    "vite-plugin-html-inject": "^1.0.1"
+    "flatpickr": "^4.6.13",
+    "izitoast": "^1.4.0"
   }
 }
